--- a/App/FrontEnd/401.html
+++ b/App/FrontEnd/401.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ch">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta charset="utf-8">
+  <title>401 Unauthorized</title>
 </head>
 <body>
-$END$
+<div style="display: flex; flex-direction: column; align-items: center">
+  <h1>401 Unauthorized</h1>
+  <div>您的密码输入有误！</div>
+  <div><a href="index.html">返回页面</a></div>
+</div>
 </body>
 </html>
