--- a/App/FrontEnd/main.html
+++ b/App/FrontEnd/main.html
@@ -8,7 +8,7 @@
 <body>
     <div class="h-center">
         <h1>{{Welcome}}</h1>
-        <div>{{account}}</div>
+        <div>账号：{{account}}</div>
     </div>
 </body>
 </html>
